--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,33 @@
 body {
-    color: black;
-    background: rgb(0, 32, 255
-   margin: 0px;                 
+  color: white;
+  background: black;
+  margin: 0px;
+  font-family: "Chakra Petch", sans-serif;
 }
+
 header {
-  border-bottom: rgb(255, 255, 22)
-    padding: 20px;
+  border-bottom: solid 2px rgb(42, 122, 228);
+  padding: 20px;
   font-size: 32px;
-  color: rgb(82, 185, 255)
+  color: rgb(42, 122, 228);
 }
+
 section {
-    background: rgb(184,156,213);
-    padding-bottom: 80px;
-    padding-top: 80px;
-    display: flex;
-    justify-content: center;
+  background: rgb(184, 156, 213);
+  padding-bottom: 80px;
+  padding-top: 80px;
+  display: flex;
+  justify-content: center;
+}
+
+.chamada-texto {
+  margin-right: 5%;
+}
+
+h1 {
+  font-size: 40px;
+}
+
+p {
+  font-size: 20px;
 }
