--- a/styles.css
+++ b/styles.css
@@ -1,61 +1,67 @@
-body {
-body {
-    color: hellow;
-    background: black;
-    margin: 0px;
-    font-family: "Chakra Petch", sans-serif;
-    margin-bottom: 100px;
-}
+<html lang="pt-BR">
 
-header {
-    border-bottom: solid 2px rgb(42, 122, 228);
-    padding: 20px;
-    font-size: 32px;
-    color: rgb(255, 183, 71));
-}
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"&gt;
+    <link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap&quot;
+        rel="stylesheet">
+    <Gaby>Gabyflix</title>
+</head>
 
-.chamada {
-    background: rgb(255, 183, 255);
-    padding-bottom: 80px;
-    padding-top: 80px;
-    display: flex;
-    justify-content: center;
-}
+<body>
+    <header>Gabyflix</header>
 
-.chamada-texto {
-    margin-right: 5%;
-}
+    <section class="chamada">
+        <div class="chamada-texto">
+            <h1>ATRAVÉS DO ARANHAVERSO</h1>
+            <p>#homem-aranha</p>
+        </div>
 
-h1 {
-    font-size: 40px;
-}
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE&quot;
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 
-p {
-    font-size: 20px;
-}
+    <section class="categoria">
+        <h2>Filmes e séries</h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc"&gt;
+                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg&quot; />
+            </a>
+            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8"&gt;
+                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg&quot; />
+            </a>
+            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc"&gt;
+                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg&quot; />
+            </a>
+            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw"&gt;
+                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg&quot; />
+            </a>
+            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis"&gt;
+                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg&quot; />
+            </a>
+        </div>
+    </section>
 
-.categoria-videos {
-    display: flex;
-    overflow-x: auto;
-    gap: 10px;
-}
+</body>
 
-.categoria {
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-top: 50px;
-}
+</html>
+Área de anexos
+Visualizar o vídeo ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME? 🕸️ Review sem spoilers Across the Spider-Verse do YouTube
 
-.categoria-videos img {
-    opacity: 0.5;
-    height: 200px;
-}
+Visualizar o vídeo Tudo sobre o OSCAR DE ANIMAÇÃO 2023 📽️ comentando todos os indicados! do YouTube
 
-.categoria-videos img:hover {
-    opacity: 1.0;
-    border: 3px solid green;
-}
+Visualizar o vídeo Meus 10 LANÇAMENTOS MAIS ESPERADOS de 2024 do YouTube
 
-.categoria h2 {
-    color: rgb(0, 0, 49);
-}
+Visualizar o vídeo ONE PIECE e a vitória da sinceridade! | Review SEM SPOILERS! ⛵🏴‍☠️ do YouTube
+
+Visualizar o vídeo Adaptações de games são o futuro do cinema? RESPONDE, MIKANNN #35 do YouTube
+
+Visualizar o vídeo FILME DO MARIO É PURA NOSTALGIA, ISSO É BOM?👨‍🔧🍄 Review Super Mario Bros. - O Filme SEM SPOILERS do YouTube
+
+
