--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,68 @@
+body {
+body {
+    color: white;
+    background: black;
+    margin: 0px;
+    font-family: "Chakra Petch", sans-serif;
+    margin-bottom: 100px;
+}
+
+header {
+    border-bottom: solid 2px rgb(255, 0, 0);
+    padding: 20px;
+    font-size: 32px;
+    color: rgb(255, 0, 0);
+}
+
+.chamada {
+    background: rgb(255, 0, 255);
+    padding-bottom: 80px;
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
+}
+
+.chamada-texto {
+    margin-right: 5%;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+p {
+    font-size: 20px;
+}
+
+.categoria-videos {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+
+.categoria {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+}
+
+.categoria-videos img {
+    opacity: 0.5;
+    height: 200px;
+}
+
+.categoria-videos img:hover {
+    opacity: 1.0;
+    border: 3px solid green;
+}
+
+.categoria h2 {
+    color: rgb(255, 0, 0);
+}
+
+Postada por TATIANA FREIBERGER NEIVA
+TATIANA FREIBERGER NEIVA
+Criado em: 13:1513:15
 <html lang="pt-BR">
 
 <head>
@@ -7,11 +72,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap&quot;
         rel="stylesheet">
-    <Gaby>Gabyflix</title>
+    <title>Tatiflix</title>
 </head>
 
 <body>
-    <header>Gabyflix</header>
+    <header>Tatiflix</header>
 
     <section class="chamada">
         <div class="chamada-texto">
@@ -57,6 +122,7 @@ Visualizar o vídeo ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME? 🕸️ Rev
 Visualizar o vídeo Tudo sobre o OSCAR DE ANIMAÇÃO 2023 📽️ comentando todos os indicados! do YouTube
 
 Visualizar o vídeo Meus 10 LANÇAMENTOS MAIS ESPERADOS de 2024 do YouTube
+
 
 Visualizar o vídeo ONE PIECE e a vitória da sinceridade! | Review SEM SPOILERS! ⛵🏴‍☠️ do YouTube
 
